Updates to Examples